[package]
name = "akasha"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }

thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = "0.28"
rand = "0.9"
http = "1.3"
httparse = "1.10"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"
ts-rs = "11.0"
pin-project = "1.1"
base64 = "0.22.1"
async-trait = "0.1.89"

[dev-dependencies]
dotenvy = "=0.15.7"

[lib]
path = "src/lib/mod.rs"
